force-app/main/default/objects/Opportunity/fields/Account_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Notification_Email__c</fullName>
    <label>Account Notification Email</label>
    <type>Email</type>
</CustomField>