force-app/main/default/objects/Opportunity/fields/Approximate_Number_of_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Number_of_Monthly__c</fullName>
    <label>Approximate Number of Monthly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>