force-app/main/default/objects/Opportunity/fields/Approximate_per_Trade_Volume__c.field-meta.xml
<CustomField>
    <fullName>Approximate_per_Trade_Volume__c</fullName>
    <label>Approximate per Trade Volume</label>
    <length>50</length>
    <type>Text</type>
</CustomField>