force-app/main/default/objects/Opportunity/fields/Countries_which_funds_transfers_are_expe__c.field-meta.xml
<CustomField>
    <fullName>Countries_which_funds_transfers_are_expe__c</fullName>
    <label>Countries which funds transfers to Go</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>