force-app/main/default/objects/Opportunity/fields/Crytpo_token_needed__c.field-meta.xml
<CustomField>
    <fullName>Crytpo_token_needed__c</fullName>
    <label>Crytpo token needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>