force-app/main/default/objects/Opportunity/fields/Currencies_Needed__c.field-meta.xml
<CustomField>
    <fullName>Currencies_Needed__c</fullName>
    <label>Currencies Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>