force-app/main/default/objects/Opportunity/fields/Purpose_of_Transactions_Please_be_speci__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Transactions_Please_be_speci__c</fullName>
    <label>Purpose of Transactions (Please be speci</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>