force-app/main/default/objects/Opportunity/fields/Transactions_Approximate_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Transactions_Approximate_Annual_Volume__c</fullName>
    <label>Transactions Approximate Annual Volume</label>
    <length>50</length>
    <type>Text</type>
</CustomField>