force-app/main/default/objects/Opportunity/fields/Win_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Reason__c</fullName>
    <label>Win Reason</label>
    <type>TextArea</type>
</CustomField>