force-app/main/default/objects/Opportunity/validationRules/Opportunity_Stage_Progression_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Stage_Progression_Order</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        ISCHANGED(StageName),
        PRIORVALUE(StageName) = &quot;New&quot;,
        NOT(ISPICKVAL(StageName, &quot;Paperwork Sent&quot;))
    ),
    
    AND(
        ISCHANGED(StageName),
        PRIORVALUE(StageName) = &quot;Paperwork Sent&quot;,
        NOT(ISPICKVAL(StageName, &quot;Paperwork Received&quot;))
    ),
    
    AND(
        ISCHANGED(StageName),
        PRIORVALUE(StageName) = &quot;Paperwork Received&quot;,
        NOT(ISPICKVAL(StageName, &quot;Client Coded&quot;))
    ),
    
    AND(
        ISCHANGED(StageName),
        PRIORVALUE(StageName) = &quot;Client Coded&quot;,
        NOT(ISPICKVAL(StageName, &quot;Closed Won&quot;)),
        NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;))
    ),
    
    AND(
        ISCHANGED(StageName),
        OR(
            PRIORVALUE(StageName) = &quot;Closed Won&quot;,
            PRIORVALUE(StageName) = &quot;Closed Lost&quot;
        )
    ),
    
    AND(
        ISNEW(),
        NOT(ISPICKVAL(StageName, &quot;New&quot;))
    )
)</errorConditionFormula>
    <errorMessage>Opportunity stages must follow this order: New → Paperwork Sent → Paperwork Received → Client Coded → Closed Won/Closed Lost. Closed opportunities cannot be reopened.</errorMessage>
</ValidationRule>