force-app/main/default/objects/Opportunity/validationRules/Win_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Win_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ISBLANK(Win_Reason__c)
)</errorConditionFormula>
    <errorMessage>The Win Reason is required for a Won Opportunity</errorMessage>
</ValidationRule>